# noshtastic

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
crates/noshtastic-android/: .dir-locals.el  .gitignore  Cargo.toml
crates/noshtastic-android/android/: build.gradle  settings.gradle
crates/noshtastic-android/android/app/: build.gradle
crates/noshtastic-android/android/app/src/main/: AndroidManifest.xml
crates/noshtastic-android/android/app/src/main/java/com/bonsai/noshtastic/: MainActivity.java
crates/noshtastic-android/src/: android.rs
crates/noshtastic-app/: Cargo.toml
crates/noshtastic-app/src/: main.rs
crates/noshtastic-cli/: Cargo.toml
crates/noshtastic-cli/src/: main.rs
crates/noshtastic-link/: Cargo.toml
crates/noshtastic-link/protos/: .gitignore  link.proto  noshtastic_link.rs
crates/noshtastic-link/src/: ble_driver.rs  error.rs  fragcache.rs  lib.rs  link.rs  outgoing.rs  usbserial_driver.rs
crates/noshtastic-relay/: Cargo.toml
crates/noshtastic-relay/src/: error.rs  lib.rs
crates/noshtastic-sync/: Cargo.toml  build.rs
crates/noshtastic-sync/protos/: .gitignore  noshtastic_sync.rs  sync.proto
crates/noshtastic-sync/src/: encoded_note.rs  error.rs  lib.rs  lruset.rs  negentropy.rs  sync.rs
crates/noshtastic-testgw/: Cargo.toml
crates/noshtastic-testgw/src/: error.rs  lib.rs
doc/: demo.md
docs/: _config.yml  index.html  index.md
docs/posts/: first-demo.md  negentropy-for-noshtastic.md  testing.md
noshtastic-app/: Cargo.toml
noshtastic-app/src/: main.rs
noshtastic-bridge/: Cargo.toml
noshtastic-bridge/src/: error.rs  lib.rs
noshtastic-link/: Cargo.toml  build.rs
noshtastic-link/protos/: link.proto
noshtastic-link/src/: error.rs  fragcache.rs  lib.rs  outgoing.rs  serial.rs
noshtastic-sync/: Cargo.toml  build.rs
noshtastic-sync/protos/: sync.proto
noshtastic-sync/src/: encoded_note.rs  error.rs  lib.rs  negentropy.rs  sync.rs
noshtastic-testgw/: Cargo.toml
noshtastic-testgw/src/: lib.rs
