[workspace]
resolver = "2"
package.version = "0.1.0"
members = [
    "crates/noshtastic-android",
    "crates/noshtastic-cli",
    "crates/noshtastic-link",
    "crates/noshtastic-relay",
    "crates/noshtastic-sync",
    "crates/noshtastic-testgw",
]

[workspace.dependencies]
# local dependencies
noshtastic-link = { path = "./crates/noshtastic-link" }
noshtastic-relay = { path = "./crates/noshtastic-relay" }
noshtastic-sync = { path = "./crates/noshtastic-sync" }
noshtastic-testgw = { path = "./crates/noshtastic-testgw" }

# common dependencies
anyhow = "1.0"
async-trait = "0.1.83"
chrono = "0.4"
env_logger = "0.11"
hex = "0.4"
log = "0.4"
nostr = "0.41"
nostr-relay-builder = "0.41"
nostrdb = "0.6"
prost = "0.11"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
