[package]
name = "noshtastic-app"
description = "A program for syncing nostr messages over a meshtastic network."
version = "0.1.0"
authors = ["Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"

[dependencies]
# local dependencies
noshtastic-bridge = { workspace = true }
noshtastic-link = { workspace = true }
noshtastic-sync = { workspace = true }

# common dependencies
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
nostrdb = { workspace = true }
tokio = { workspace = true }

# unique dependencies
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
directories-next = "2.0"
rustls = "0.23"
