[package]
name = "noshtastic-sync"
description = "A module which synchronizes nostr messages using modified negentropy."
version = "0.1.0"
authors = ["Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"

[dependencies]
# local dependencies
noshtastic-link = { workspace = true }

# common dependencies
hex = { workspace = true }
log = { workspace = true }
nostrdb = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

# unique dependencies
brotli = "7.0"
negentropy = { git = "https://github.com/ksedgwic/rust-negentropy.git", rev = "ec19dbb4947fa7b0fbf900405a92bde504598ed1", features = ["tiny-frame"] }
nostr = "0.38"
secp256k1 = "0.29"
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.8"
