[package]
name = "noshtastic-testgw"
description = "Ingests test packets from a standard nostr relay."
version = "0.1.0"
authors = ["Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"

[dependencies]
# local dependencies

# common dependencies
log = { workspace = true }
nostrdb = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# unique dependencies
enostr = { git = "https://github.com/damus-io/notedeck.git", rev = "eeab1666e7e8e868438a69024e9cb99f15f8713a" }
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
env_logger = { workspace = true }
hex = { workspace = true }
once_cell = "1.20"
