[package]
name = "noshtastic-android"
description = "The android mobile version of Noshtastic."
version = { workspace = true }
authors = ["Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"

[dependencies]
# common dependencies
tokio = { workspace = true }

# unique dependencies
eframe = { version = "0.30", default-features = false, features = [ "wgpu", "wayland", "x11", "android-game-activity" ] }
egui = { version = "0.30", features = ["serde"] }
egui-winit = { version = "0.30", features = ["android-game-activity"] }
egui_extras = { version = "0.30", features = ["all_loaders"] }
ehttp = "0.5.0"
ewebsock = { version = "0.8", features = ["tls"] }
tracing = { version = "0.1", features = ["log"] }
tracing-appender = "0.2"
tracing-logcat = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
crate-type = ["cdylib"]
