[package]
name = "noshtastic-android"
description = "The android mobile version of Noshtastic."
version = { workspace = true }
authors = ["Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"

[dependencies]
# common dependencies
chrono = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }

# unique dependencies
eframe = { version = "0.30", default-features = false, features = [ "wgpu", "wayland", "x11", "android-game-activity" ] }
egui = { version = "0.30", features = ["serde"] }
egui-winit = { version = "0.30", features = ["android-game-activity"] }
egui_extras = { version = "0.30", features = ["all_loaders"] }
ehttp = "0.5.0"
ewebsock = { version = "0.8", features = ["tls"] }
log = "0.4"
once_cell = "1.21"

[lib]
crate-type = ["cdylib"]

[build]
target = "aarch64-linux-android"
