[package]
name = "noshtastic-android"
description = "The android mobile version of Noshtastic."
version = { workspace = true }
authors = ["Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"

[dependencies]
# local dependencies
noshtastic-link = { workspace = true }
noshtastic-sync = { workspace = true }
noshtastic-relay = { workspace = true }

# common dependencies
anyhow = { workspace = true }
chrono = { workspace = true }
nostr-relay-builder = { workspace = true }
nostrdb = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# unique dependencies
android_logger = "0.15"
btleplug = "0.11"
# ehttp = "0.5.0"
# ewebsock = { version = "0.8", features = ["tls"] }
jni = "0.19"
jni-utils = "0.1"
libc = "0.2"
log = "0.4"
once_cell = "1.21"

[lib]
crate-type = ["cdylib"]

[build]
target = "aarch64-linux-android"

# NOTE - these directives can likely be sacrificed to reduce size at
# the cost of losing symbolic backtraces.  Also see `--no-strip` in
# the top-level Makefile ...

[profile.dev]
panic = "unwind"
debug = true
strip = false
split-debuginfo = "unpacked"

[profile.release]
panic = "unwind"
debug = true
strip = false
split-debuginfo = "unpacked"
