[package]
name = "noshtastic-cli"
description = "A command line program for syncing nostr messages over a meshtastic network."
version = { workspace = true }
authors = ["Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"

[features]
default = ["ring"]
ring = ["rustls/ring"]
aws_lc_rs = ["rustls/aws_lc_rs"]

[dependencies]
# local dependencies
noshtastic-link = { workspace = true }
noshtastic-sync = { workspace = true }
noshtastic-testgw = { workspace = true }
noshtastic-relay = { workspace = true }

# common dependencies
anyhow = { workspace = true }
chrono = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
nostrdb = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# unique dependencies
clap = { version = "4.5", features = ["derive"] }
directories-next = "2.0"
rustls = { version = "0.23", default-features = false, features = ["logging"]}

