[package]
name = "noshtastic-link"
description = "A library which facilitates sending noshtastic messages to meshtastic radios."
version = { workspace = true }
authors = ["Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"

[dependencies]
# common dependencies
async-trait = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# unique dependencies
sha2 = "0.10"
tokio-serial = "5.4"

# need BLE, use custom branch w/ prospective PRs
meshtastic =  { git = "https://github.com/ksedgwic/meshtastic-rust", rev = "77b35cb6243ee17db2f78652934cfad3e52f9be7", features = ["bluetooth-le"] }
#meshtastic = { path = "../../../meshtastic-rust", features = ["bluetooth-le"] }

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
hex = { workspace = true }

[lib]
crate-type = ["lib", "cdylib"]
