[package]
name = "noshtastic-sync"
description = "A module which synchronizes nostr messages using modified negentropy."
version = { workspace = true }
authors = ["Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"

[dependencies]
# local dependencies
noshtastic-link = { workspace = true }

# common dependencies
hex = { workspace = true }
log = { workspace = true }
nostrdb = { workspace = true }
prost = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# unique dependencies
brotli = "7.0"
futures = "0.3"
negentropy = { git = "https://github.com/ksedgwic/rust-negentropy.git", rev = "ec19dbb4947fa7b0fbf900405a92bde504598ed1", features = ["tiny-frame"] }
nostr = "0.41"
rand = "0.8"
secp256k1 = "0.29"

[build-dependencies]
tonic-build = "0.8"

[lib]
crate-type = ["lib", "cdylib"]
