[package]
name = "noshtastic-testgw"
description = "Ingests test packets from a standard nostr relay."
version = "0.1.0"
authors = ["Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"

[dependencies]
# local dependencies

# common dependencies
log = { workspace = true }
nostrdb = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# unique dependencies
enostr = { git = "https://github.com/ksedgwic/notedeck.git", rev = "5adbd88fd82c171404d5c45ddc9448cdf9a815aa" }
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
env_logger = { workspace = true }
hex = { workspace = true }
once_cell = "1.20"
