[package]
name = "noshtastic-testgw"
description = "Ingests test packets from a standard nostr relay."
version = { workspace = true }
authors = ["Ken Sedgwick <ken@bonsai.com>"]
edition = "2021"

[dependencies]
# local dependencies

# common dependencies
log = { workspace = true }
nostrdb = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# unique dependencies
nostr-relay-pool = "0.41"
uuid = { version = "1.15", features = ["v4"] }

[dev-dependencies]
env_logger = { workspace = true }
hex = { workspace = true }
once_cell = "1.20"

[lib]
crate-type = ["lib", "cdylib"]
